добавил недостающую логику для проекта